--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+# Site
+title: "SHIRASAGI 開発マニュアル"
+author: "SHIRASAGI Project"
+
+# Conversion
 #markdown: kramdown
 markdown: redcarpet
 exclude: ["vendor", "Gemfile", "Gemfile.lock"]
