add gem 'kramdown'

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: "SHIRASAGI 開発マニュアル"
 author: "SHIRASAGI Project"
 
 # Conversion
-#markdown: kramdown
-markdown: redcarpet
+markdown: kramdown
 exclude: ["vendor", "Gemfile", "Gemfile.lock"]
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+
+#redcarpet:
+#  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
